Background Image Variables for mobile and Desktop

--- a/Day14/style.css
+++ b/Day14/style.css
@@ -4,6 +4,9 @@
     --dark-grayish-magenta: hsl(303, 10%, 53%);
     --light-grayish-magenta: hsl(300, 24%, 96%);
     --white: hsl(0, 0%, 100%);
+
+    --bg-top: url(./img/bg-pattern-top-mobile.svg) top left no-repeat;
+    --bg-bottom: url(./img/bg-pattern-bottom-mobile.svg) bottom right no-repeat;
 }
 *{
     box-sizing: border-box;
@@ -16,8 +19,7 @@ body{
     line-height: 130%;
     display: grid;
     place-items: center;
-    background: url(./img/bg-pattern-top-mobile.svg) top left no-repeat,
-                url(./img/bg-pattern-bottom-mobile.svg) bottom right no-repeat;
+    background: var(--bg-top), var(--bg-bottom);
 }
 .container{
     padding: 1rem;
@@ -96,6 +98,10 @@ body{
     text-decoration: none;
 }
 @media screen and (min-width:1036px){
+    :root{
+        --bg-top: url(./img/bg-pattern-top-desktop.svg) top left no-repeat;
+        --bg-bottom: url(./img/bg-pattern-bottom-desktop.svg) bottom right no-repeat;
+    }
     body{
         background: url(./img/bg-pattern-top-desktop.svg) top left no-repeat,
                     url(./img/bg-pattern-bottom-desktop.svg) bottom right no-repeat;
