Added height to body so that it centers

--- a/Day14/style.css
+++ b/Day14/style.css
@@ -19,6 +19,7 @@ body{
     line-height: 130%;
     display: grid;
     place-items: center;
+    height: 100vh;
     background: var(--bg-top), var(--bg-bottom);
 }
 .container{
