--- a/Day16/style.css
+++ b/Day16/style.css
@@ -68,10 +68,10 @@ body{
     color: #fff;
 }
 .attribution {
-    font-size: 10px;
+    text-align: center;
 }
 .attribution a {
-    color: #3e52a3;
+    color: #fff;
     text-decoration: none;
 }
 @media screen and (max-width:1050px) and (min-width:950px){
