--- a/Day27-30/style.css
+++ b/Day27-30/style.css
@@ -122,14 +122,217 @@ body{
         background-color: #fff;
     }
 }
+/* Banner Section */
+.banner{
+    background: var(--dark-violet);
+    max-height: 584px;
+    margin-bottom: 15rem;
+}
+.banner >div{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-column-gap: 2rem;
+    padding: 5rem 1rem;
+    color: #fff;
+}
+.dang{
+    grid-row: 1/3;
+}
+.banner .image{
+    background: url(./img/image-intro-desktop.jpg) no-repeat;
+    background-size: contain;
+    grid-row:1/4;
+}
+.dang hr{
+    width: 160px;
+}
+.dang .heading{
+    font-family: 'DM Serif Display', serif;
+    font-size: 4rem;
+    font-weight: 400;
+    line-height: 5rem;
+    max-width: 460px;
+    margin: 3rem 0 1.5rem;
+}
+.dang .description{
+    letter-spacing: .4px;
+    line-height: 1.5rem;
+}
+.dang .button {
+    display: inline-block;
+    text-decoration: none;
+    border: 2px solid #fff;
+    margin: 2rem 0;
+    color: #fff;
+    font-weight: 700;
+    padding: .5rem 1.5rem;
+    letter-spacing: 0.4px;
+}
+.dang .button:hover,
+.dang .button:focus,
+.dang .button:active{
+    background: #fff;
+    color: var(--dark-violet);
+}
+
+@media screen and (max-width:992px){
+    .banner{
+        max-height: 100%;
+    }
+    .banner >div {
+        grid-template-columns: 1fr;
+        grid-template-rows: 2fr 1fr;
+        padding: 0 1rem 2rem;
+        grid-row-gap: 2rem;
+    }
+    .banner .dang{
+        grid-row: 2;
+    }
+    .banner .image{
+        grid-row: 1;
+    }
+}
+@media screen and (max-width:768px){
+    .banner >div{
+        grid-template-rows: 1.5fr 1fr;
+        text-align: center;
+    }
+    .dang hr{
+        margin: auto;
+    }
+    .banner .image{
+        background: url(./img/image-intro-mobile.jpg) no-repeat;
+        background-size: contain;
+    }
+}
+@media screen and (max-width:576px){
+    .banner .image{
+        margin-left:  -1rem;
+        margin-right:  -1rem;
+        background-size: contain;
+    }
+}
+/* We are Different Section */
+.who hr{
+    width: 160px;
+}
+.who > div{
+    display: flex;
+}
+.feature{
+    margin:2rem 1rem;
+    color: var(--dark-grayish-violet);
+    letter-spacing: .4px;
+    line-height: 1.5rem;
+}
+.who .heading,
+.feature .title{
+    font-family: 'DM Serif Display', serif;
+    color: var(--very-dark-violet);
+    font-weight: 400;
+}
+.who .heading{
+    font-size: 4rem;
+    margin: 2rem 0;
+}
+.feature .title{
+    font-size: 1.5rem;
+    margin: 1rem 0;
+}
+
+@media screen and (max-width:768px){
+    .who{
+        text-align: center;
+    }
+    .who hr{
+        margin: auto;
+    }
+    .who > div{
+        flex-direction: column;
+        align-items: center;
+    }
+    .who .heading {
+        font-size: 3rem;
+    }
+}
+
+/* How We work section */
+.how{
+    display: flex;
+    justify-content: space-between;
+    padding:5rem;
+    margin:5rem 0 10rem;
+    background: var(--dark-violet);
+    color: #fff;
+}
+.how .heading{
+    font-family: 'DM Serif Display', serif;
+    font-size: 4rem;
+    font-weight: 400;
+    line-height: 4rem;
+    max-width: 560px;
+}
+.how .button {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    border: 2px solid #fff;
+    margin: auto 0;
+    color: #fff;
+    font-weight: 700;
+    padding: .5rem 1.5rem;
+    letter-spacing: 0.4px;
+}
+.how .button:hover,
+.how .button:focus,
+.how .button:active{
+    background: #fff;
+    color: var(--dark-violet);
+}
+
+@media screen and (max-width:992px){
+    .how{
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+    }
+    .how .button{
+        margin: 4rem 0 0;
+    }
+}
+@media screen and (max-width:768px){
+    .how{
+        padding: 5rem 1rem;
+    }
+    .how .heading{
+        font-size: 2.5rem;
+        line-height: 2.5rem;
+    }
+}
+
 
 /* Footer */
+footer{
+    background: var(--very-light-gray);
+    padding-top:5rem;
+    padding-bottom:5rem;
+}
 .footer-top{
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding-bottom: 1rem;
     border-bottom: 2px solid var(--dark-grayish-violet);
+}
+.social .icon{
+    text-decoration: none;
+    opacity: 0.6;
+}
+.social .icon:hover,
+.social .icon:focus,
+.social .icon:active{
+    opacity: 1;
 }
 .social img {
     margin-left: .5rem;
@@ -147,7 +350,13 @@ body{
     font-weight: 700;
     color: var(--dark-violet);
 }
+.sitemap-link:hover,
+.sitemap-link:focus,
+.sitemap-link:active{
+    text-decoration: underline;
+}
 .sitemap-header{
+    cursor: default;
     margin: 3rem 0 2rem;
     color: var(--dark-grayish-violet);
 }
@@ -164,6 +373,7 @@ body{
         text-align: center;
     }
 }
+
 
 /* Container Media Queries */
 @media screen and (min-width:1200px){
